--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,7 @@ span.loading-username, span.check-password, span.check-password-verify {
 .register-input {
 	padding-right: 35px;
 }
+
+.content {
+    margin-top: 30px;
+}
