--- a/assets/css/select2-bootstrap.css
+++ b/assets/css/select2-bootstrap.css
@@ -31,7 +31,8 @@
   padding: 0;
   border-color: #cccccc;
   border-radius: 4px;
-  color: #555555;
+  /*color: #555555;*/
+  color: #999999;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: white;
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
