--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,13 @@ span.loading-username, span.check-password, span.check-password-verify {
 .content {
     margin-top: 30px;
 }
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-image: linear-gradient(#54B4EB, #2FA4E7 60%, #1D9CE5);
+  color: #FFFFFF;
+}
+
+.title-table {
+    border-bottom: 1px solid #DDDDDD;
+    margin-bottom: 15px;
+}
