--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,16 @@ span.loading-username, span.check-password, span.check-password-verify {
 .efk-login li a:hover, .efk-login li a:focus {
 	text-decoration: none !important;
 }
+
+.ckb_label:hover {
+	cursor: pointer;
+}
+
+.alert-user {
+	margin-left: 0px;
+	padding-left: 10px;
+}
+
+.text-yellow {
+	color: #F39C12 !important;
+}
