--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,9 +223,14 @@ span.loading-username, span.check-password, span.check-password-verify {
 
 .upload-profile-picture > label:before {
     color: #CCCCCC;
-    content: attr(data-title);
+    content: attr(data-title);    
     padding: 0 8px;
     display: block;
+    font-size: 13px;
+}
+
+.upload-profile-picture > label.cropped:before {
+	content: "";
 }
 
 .upload-profile-picture > label {
@@ -239,6 +244,20 @@ span.loading-username, span.check-password, span.check-password-verify {
     display: block;
 }
 
+.upload-profile-picture > label.cropped {
+	padding-top: 8px !important;
+	-moz-box-sizing: border-box;
+    background-color: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+    border-radius: 6px 6px 6px 6px;
+    box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
+}
+
+
 .upload-profile-picture span {
     color: #CCCCCC;
+}
+
+.separation {
+    margin-bottom: 12px;
 }
